# algostudy

./: .gitignore  Chap 2 Problem._2txt.txt  README.md
Coding Interview/: Chap 2 Problem.txt
answer/week1/: stair.py
answer/week2/: 2095.cc
coding-interview/: chap2-problem.md  chap3-problem.md
ds/cracking-the-coding-interview/: readme.md
ds/cracking-the-coding-interview/1-array-and-string/: 1.cc  2.cc  CMakeLists.txt
ds/cracking-the-coding-interview/2-linked-list/: 1.cc  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  CMakeLists.txt  linked_list.h
ds/cracking-the-coding-interview/3-stack-and-queue/: 1.cpp  2.cpp  3.cpp  5.cpp  CMakeLists.txt  stack.h
ds/cracking-the-coding-interview/4-tree-and-graph/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  bfs.cpp  tree.h
ds/my_container/: BST.py  BinaryTree.py  LinkedList.py
ds/week1/: README.md  boj_1697.py  factorial.py  hanoi.py  nbit.py  step.py
ds/week1/cpp/: 1697.cc  CMakeLists.txt
ds/week2/: 1158.py  5397.py  5397_submit.py
ds/week3/: readme.md
ds/week4/: 1694.py  9237.py  prob27.py  readme.md
hs/week1/: hide_and_seek.py  stairs_problem.py
hs/week1/advanced_/: magic_star.py
hs/week2/key_logger/: .gitignore  compile.sh  key_logger.cc
sy/week1/: HAS_1.py  medi.py  medi_dy.py
sy/week2/: jsps.py  klg.py
